--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "objection": "^2.2.2",
     "pg": "^8.3.0"
